--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
@@ -37,15 +37,11 @@ We want to bring the theory of connections and the Chern-Weil discoveries about 
 \item Classically, manifolds with good open covers are glued together and 0-truncated, i.e. a standard pushout is used.
 \item We will replace the manifold with a discrete object with the same homotopy type, taking the nerve of the open cover.
 \item We can do this \emph{twice}: in sets, and in higher inductive types.
-\item We can remain in 0-types and take the poset of the open cover, forming an abstract polytope. 
-\begin{enumerate}
-  \item Abstract polytopes have this dyadic restriction: two faces meet at each of the edges, in all dimensions: if the ranks of two faces \( a > b \) differ by 2, then there are exactly 2 faces that lie strictly between \( a \) and \( b \).
-  \item There's no particular reason to use polytopes instead of other complexes. I just saw that Egbert had already formalized them (as posets only).
-\end{enumerate}
-\item We can define discrete functions and connections on such a combinatorial object. This is a field called discrete differential geometry. The first two words of the name should probably cancel out.
-\item In HITs we will use the same poset but will put the edges at dimension 1, faces at dimension 2 and so on. This amounts to forming the homotopy pushout of the good open cover, since each open set is contractible. Call this a \emph{higher polytope}.
-\item Both polytopes have the homotopy type of the original manifold in the appropriate sense (one by the nerve theorem, one via real-cohesive HoTT). There are other approaches to doing this, such as the shape modality from real-cohesive homotopy type theory. We probably need to prove they are equivalent.
-\item We will map out of the polytope into the delooping of \( S^1 \) (the discrete 1-type, not the smooth 0-type). We will notice how much HoTT functoriality resembles connections and transport, including curvature.
+\item We can remain in 0-types: add a vertex for each open set; connect two vertices with an edge if there is a nonempty 2-way overlap; fill in a triangle with a face if there is a 3-way overlap and so on.
+\item We can define discrete functions and connections on such a combinatorial object. This is a field called discrete differential geometry. (The first two words of the name should probably cancel out.)
+\item In HITs we will use the same data but will put the edges at homotopy dimension 1, faces at dimension 2 and so on. This amounts to forming the homotopy pushout of the good open cover, since each open set is contractible.
+\item Both of these combinatorial objects have the homotopy type of the original manifold in the appropriate sense (one by the nerve theorem, one via real-cohesive HoTT).
+\item We will map out of the HIT into the delooping of \( S^1 \) (the discrete 1-type, not the smooth 0-type). We will notice how much HoTT transport resembles connections, including curvature at dimension 2.
 \item This will inspire us to claim that HoTT transport deserves to be called a discrete connection.
 \item We will establish some criteria to test this idea, and work through those.
 \end{enumerate}
