--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
@@ -27,6 +27,8 @@
 
 \graphicspath{ {./img/} }
 
+\usetikzlibrary{arrows.meta,positioning,quotes}
+
 \bibliographystyle{IEEEtran} % shows URL
 \setcitestyle{square,numbers}
 
