--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
@@ -43,7 +43,7 @@
 \newcommand{\sit}[1]{\sum_{#1}} % sigma-type
 \newcommand{\ent}{\vdash}
 \newcommand{\adj}{\dashv}
-\newcommand{\refl}{\ensuremath{\textsf{refl}}}
+\newcommand{\refl}{\ensuremath{\mathsf{refl}}}
 \newcommand{\ap}{\ensuremath{\textsf{ap}}}
 \newcommand{\pr}{\ensuremath{\mathrm{pr}}}
 \newcommand{\ind}{\ensuremath{\textsf{ind}}}
