--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
@@ -247,11 +247,11 @@ Denote by \( C_4 \) the join \( \{b, g\}*\{r, o\} \). This is the equator of the
 \end{mydef}
 
 \begin{mylemma}
-\( (C_4, b)\equiv S^1 \).
+\( (C_4, b)\simeq S^1 \).
 \end{mylemma}
 
 \begin{mylemma}
-\( \oo\equiv S^2 \).
+\( \oo\simeq S^2 \).
 \end{mylemma}
 
 \begin{mydef}
