Checkpoint before the next rewrite

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
@@ -17,6 +17,7 @@
 \let\!\bang
 \RequirePackage{graphicx}
 \RequirePackage{float}
+\PassOptionsToPackage{hyphens}{url}
 \RequirePackage{hyperref}
 \RequirePackage[numbers]{natbib}
 \RequirePackage{parskip} % removes paragraph indent, adds vertical space
@@ -44,18 +45,18 @@
 \newcommand{\ent}{\vdash}
 \newcommand{\adj}{\dashv}
 \newcommand{\refl}{\ensuremath{\mathsf{refl}}}
-\newcommand{\ap}{\ensuremath{\textsf{ap}}}
+\newcommand{\ap}{\ensuremath{\mathsf{ap}}}
 \newcommand{\pr}{\ensuremath{\mathrm{pr}}}
-\newcommand{\ind}{\ensuremath{\textsf{ind}}}
-\newcommand{\lift}{\ensuremath{\textsf{lift}}}
-\newcommand{\inv}{\ensuremath{\textsf{inv}}}
-\newcommand{\concat}{\ensuremath{\textsf{concat}}}
-\newcommand{\transport}{\ensuremath{\textsf{transport}}}
-%\renewcommand{\sec}{\ensuremath{\textsf{sec}}}
-\newcommand{\retr}{\ensuremath{\textsf{retr}}}
-\newcommand{\total}{\ensuremath{\textsf{total}}}
-\newcommand{\isequiv}{\ensuremath{\textsf{is\_equiv}}}
-\newcommand{\fib}{\ensuremath{\textsf{fib}}}
+\newcommand{\ind}{\ensuremath{\mathsf{ind}}}
+\newcommand{\lift}{\ensuremath{\mathsf{lift}}}
+\newcommand{\inv}{\ensuremath{\mathsf{inv}}}
+\newcommand{\concat}{\ensuremath{\mathsf{concat}}}
+\newcommand{\transport}{\ensuremath{\mathsf{transport}}}
+%\renewcommand{\sec}{\ensuremath{\mathsf{sec}}}
+\newcommand{\retr}{\ensuremath{\mathsf{retr}}}
+\newcommand{\total}{\ensuremath{\mathsf{total}}}
+\newcommand{\isequiv}{\ensuremath{\mathsf{is\_equiv}}}
+\newcommand{\fib}{\ensuremath{\mathsf{fib}}}
 \newcommand{\id}{\ensuremath{\text{id}}}
 \newcommand{\judgeq}{\ensuremath{:\equiv}}
 \newcommand{\reflfx}{\ensuremath{\refl_{f(x)}}}
@@ -77,20 +78,20 @@
 \newcommand{\zz}{\ensuremath{\mathbb{Z}}}
 \newcommand{\vvv}{\ensuremath{\mathbb{V}}}
 \newcommand{\cinfty}{\ensuremath{C^{\infty}}}
-\newcommand{\smfd}{\textsf{SmoothMfd}}
-\newcommand{\calg}{\textsf{CAlg}_{\rr}}
-\newcommand{\cart}{\textsf{CartSp}}
-\newcommand{\formalcart}{\textsf{FormalCartSp}}
-\newcommand{\formalsmoothset}{\textsf{FormalSmoothSet}}
-\newcommand{\smoothset}{\textsf{SmoothSet}}
-\newcommand{\setcat}{\textsf{Set}}
-\newcommand{\psh}[1]{\textsf{Psh}(#1)}
-\newcommand{\sh}[1]{\textsf{Sh}(#1)}
+\newcommand{\smfd}{\mathsf{SmoothMfd}}
+\newcommand{\calg}{\mathsf{CAlg}_{\rr}}
+\newcommand{\cart}{\mathsf{CartSp}}
+\newcommand{\formalcart}{\mathsf{FormalCartSp}}
+\newcommand{\formalsmoothset}{\mathsf{FormalSmoothSet}}
+\newcommand{\smoothset}{\mathsf{SmoothSet}}
+\newcommand{\setcat}{\mathsf{Set}}
+\newcommand{\psh}[1]{\mathsf{Psh}(#1)}
+\newcommand{\sh}[1]{\mathsf{Sh}(#1)}
 \newcommand{\pshcart}{\psh{\cart}}
 \newcommand{\rmodal}{\Re}
 \newcommand{\imodal}{\Im}
 \newcommand{\shape}{\text{\textesh}}
-\newcommand{\op}[1]{#1^{\textsf{op}}}
+\newcommand{\op}[1]{#1^{\mathsf{op}}}
 \newcommand{\pt}{\mathrm{pt}}
 \newcommand{\Aut}{\mathrm{Aut}}
 \newcommand{\BAut}{\mathrm{BAut}}
@@ -119,8 +120,8 @@
 \newcommand{\mychapterstar}[1]{\chapter*{\texorpdfstring{#1}{\detokenize{#1}}}}
 
 \newcommand{\bg}{\ensuremath{\textbf{B}G}}
-\newcommand{\bgconn}{\ensuremath{\textbf{B}G_{\textsf{conn}}}}
-\newcommand{\bgdiff}{\ensuremath{\textbf{B}G_{\textsf{diff}}}}
+\newcommand{\bgconn}{\ensuremath{\textbf{B}G_{\mathsf{conn}}}}
+\newcommand{\bgdiff}{\ensuremath{\textbf{B}G_{\mathsf{diff}}}}
 \makeatletter
 \newcommand*{\doublerightarrow}[2]{\mathrel{
   \settowidth{\@tempdima}{$\scriptstyle#1$}
@@ -145,7 +146,7 @@
 \newcommand{\image}{\mathrm{Image}}
 \newcommand{\myfig}[2]{\begin{figure}[ht]\caption{#1}\centering\includegraphics[width=0.6\textwidth]{#2}\end{figure}}
 %\newcommand{\gc}[1]{}
-\newcommand{\defeq}{\stackrel{\textup{def}}{=}}
+\newcommand{\defeq}{\stackrel{\mathrm{def}}{=}}
 \newcommand{\U}{\mathcal{U}}
 \newcommand{\BG}{\mathsf{B}G}
 \newcommand{\Copy}{\mathrm{Copy}}
