draft that I sent out

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/connections.bib
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/connections.bib
@@ -392,6 +392,17 @@ a kind of cohesive motives.},
   year={1982},
   publisher={Springer New York}
 }
+
+@book{donaldson_kronheimer,
+  title={The Geometry of Four-manifolds},
+  author={Donaldson, S.K. and Kronheimer, P.B.},
+  isbn={9780198535539},
+  lccn={89077530},
+  series={Oxford mathematical monographs},
+  year={1990},
+  publisher={Clarendon Press}
+}
+
 @book{talbott,
   title={The Future Does Not Compute: Transcending the Machines in Our Midst},
   author={Talbott, S.},
@@ -410,11 +421,83 @@ year = {2010},
 url = {http://resolver.caltech.edu/CaltechTHESIS:05282010-102307125}
 }
 
-@book{crane_ddg,
-editor = {Keenan Crane},
-title = {An Excursion Through Discrete Differential Geometry},
-journal = {Proceedings of Symposia in Applied Mathematics},
-volume = {76},
-year = {2020},
-publisher = {American Mathematical Society}
+@inproceedings{crane_ddg,
+author = {Keenan Crane and Fernando de Goes and Mathieu Desbrun and Peter Schröder},
+title = {Digital Geometry Processing with Discrete Exterior Calculus},
+booktitle = {ACM SIGGRAPH 2013 courses},
+series = {SIGGRAPH '13},
+year = {2013},
+location = {Anaheim, California},
+numpages = {126},
+publisher = {ACM},
+address = {New York, NY, USA},
+url = {{https://www.cs.cmu.edu/~kmcrane/Projects/DDG/}},
 }
+@phdthesis{hiranidec,
+  title={Discrete exterior calculus},
+  author={Hirani, Anil Nirmal},
+  year={2003},
+  publisher={California Institute of Technology}
+}
+
+@misc{desbrundec,
+      title={Discrete Exterior Calculus}, 
+      author={Mathieu Desbrun and Anil N. Hirani and Melvin Leok and Jerrold E. Marsden},
+      year={2005},
+      eprint={math/0508341},
+      archivePrefix={arXiv},
+      primaryClass={math.DG}
+}
+
+@misc{leok,
+      title={A Discrete Theory of Connections on Principal Bundles}, 
+      author={Melvin Leok and Jerrold E. Marsden and Alan D. Weinstein},
+      year={2005},
+      eprint={math/0508338},
+      archivePrefix={arXiv},
+      primaryClass={math.DG}
+}
+
+@article{patterson_diffeq,
+ title={A diagrammatic view of differential equations in physics},
+ volume={5},
+ ISSN={2640-3501},
+ url={http://dx.doi.org/10.3934/mine.2023036},
+ DOI={10.3934/mine.2023036},
+ number={2},
+ journal={Mathematics in Engineering},
+ publisher={American Institute of Mathematical Sciences (AIMS)},
+ author={Patterson, Evan and Baas, Andrew and Hosgood, Timothy and Fairbanks, James},
+ year={2022},
+ pages={1–59} 
+}
+
+@misc{morris_decapodes,
+      title={Decapodes: A Diagrammatic Tool for Representing, Composing, and Computing Spatialized Partial Differential Equations}, 
+      author={Luke Morris and Andrew Baas and Jesus Arias and Maia Gatlin and Evan Patterson and James P. Fairbanks},
+      year={2024},
+      eprint={2401.17432},
+      archivePrefix={arXiv},
+      primaryClass={math.NA}
+}
+
+@book{whitney1957,
+ ISBN = {9780691079721},
+ URL = {http://www.jstor.org/stable/j.ctt183q1bm},
+ abstract = {The book description for "Geometric Integration Theory" is currently unavailable.},
+ author = {Hassler Whitney},
+ publisher = {Princeton University Press},
+ title = {Geometric Integration Theory},
+ urldate = {2024-04-17},
+ year = {1957}
+}
+
+@misc{shulman_logic_of_space,
+       title={Homotopy type theory: the logic of space}, 
+       author={Michael Shulman},
+       year={2017},
+       eprint={1703.03007},
+       archivePrefix={arXiv},
+       primaryClass={math.CT}
+ }
+ 
