--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
@@ -1,12 +1,13 @@
 \ProvidesPackage{greg}[2021/06/06 v1.0 My own macros]
 
-%\RequirePackage[margin=1in]{geometry}
+\RequirePackage[margin=1in]{geometry}
 %\RequirePackage[utf8]{inputenc}
 \RequirePackage{amsfonts}
 \RequirePackage{amsmath}
 \RequirePackage{amsthm}
 \RequirePackage{amscd}
 \RequirePackage{tikz}
+
 \RequirePackage{agda}
 % tipa is redefining the semicolon and bang
 \let\semicolon\;
@@ -25,6 +26,8 @@
 \RequirePackage{tcolorbox}
 \RequirePackage{mathrsfs}
 \RequirePackage{quiver}
+\RequirePackage{luatex85}
+\RequirePackage[all]{xy}
 
 \graphicspath{ {./img/} }
 
