factored thesis into separate files; put to_html output into a directory

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_poincare_hopf.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_poincare_hopf.tex
@@ -1,1 +1,22 @@
-\section{Vector fields and the Poincaré-Hopf theorem}
+\section{Gauss-Bonnet, Vector Fields and Poincaré-Hopf theorem}
+
+To prove the Gauss-Bonnet theorem one needs a notion of \emph{Euler characteristic} and a notion of curvature. To prove the Poincaré-Hopf theorem, one needs a notion of \emph{the index of a vector field}, and again, a notion of curvature. To prove both and relate them it helps to equate the Euler characteristic to the index of a special vector field. 
+
+\begin{mydef}
+A vector field is a section \( X \) of the disk bundle. A zero of \( X \) is a vertex \( x \) where \( X(x)=x:\disk(x) \), the center of the disk.
+\end{mydef}
+
+The following proofs follow the explanations given in \cite{needham}. But as we might hope, the proofs can be brought into HoTT in a much abbreviated form!
+
+Note that \( X \) is a pointing of all the fibers. So a second vector field can be lifted to the classifying map to pointed types, which is contractible. That's really all that's going on in these classical proofs!
+
+\begin{mydef}
+The index of a vector field at a zero is given by transport composed with exp.
+\end{mydef}
+
+\begin{mydef}
+
+\end{mydef}
+
+
+
