--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
@@ -107,6 +107,9 @@
 \newcommand{\LAut}{\mathrm{LAut}}
 \newcommand{\im}{\mathrm{im}}
 \newcommand{\Fin}{\mathrm{Fin}}
+\newcommand{\link}{\mathsf{link}}
+\newcommand{\xbox}{\mathsf{xbox}}
+\newcommand{\disk}{\mathsf{disk}}
 \newcommand{\Type}{\mathsf{Type}}
 \newcommand{\Typeo}{\Type_{\shapeo}}
 \newcommand{\Types}{\Type_{\shape}}
