--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/connections.bib
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/connections.bib
@@ -501,3 +501,12 @@ url = {{https://www.cs.cmu.edu/~kmcrane/Projects/DDG/}},
        primaryClass={math.CT}
  }
  
+@book{needham,
+   title={Visual Differential Geometry and Forms: A Mathematical Drama in Five Acts},
+   author={Needham, T.},
+   isbn={9780691203706},
+   lccn={2021934723},
+   url={https://books.google.com/books?id=Mc0QEAAAQBAJ},
+   year={2021},
+   publisher={Princeton University Press}
+ }
