--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt]{article}
+\documentclass[12pt,fleqn]{article}
 \usepackage{greg}
 \usepackage[baskerville,vvarbb]{newtxmath}
 \usepackage{fontspec}
