--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
@@ -7,6 +7,7 @@
 \RequirePackage{amsthm}
 \RequirePackage{amscd}
 \RequirePackage{tikz}
+\RequirePackage{tkz-graph}
 
 \RequirePackage{agda}
 % tipa is redefining the semicolon and bang
@@ -110,6 +111,9 @@
 \newcommand{\link}{\mathsf{link}}
 \newcommand{\xbox}{\mathsf{xbox}}
 \newcommand{\disk}{\mathsf{disk}}
+\newcommand{\xdisk}{\mathsf{xdisk}}
+\newcommand{\GTor}{\mathsf{GTor}}
+\newcommand{\GType}{\mathsf{GType}}
 \newcommand{\Type}{\mathsf{Type}}
 \newcommand{\Typeo}{\Type_{\shapeo}}
 \newcommand{\Types}{\Type_{\shape}}
