--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_examples.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_examples.tex
@@ -1,7 +1,9 @@
 \section{Examples}
-\subsection{The tangent bundle of the 2-sphere}
+\subsection{The octahedron}
 
 We will define some higher inductive types to serve as domain and codomain of these motivating examples.
+
+\subsubsection{The higher inductive type \( \oo \)}
 
 First we need a square, which will be a stand-in for a circle that can support a notion of a quarter-rotation. 
 
@@ -17,7 +19,11 @@ c_4c_1 &: c_4 = c_1 \\
 \end{align*}
 \end{mydef}
 
+\begin{figure}[h]
+\centering
 \input{discrete_gauge_theory_c4_tikz}
+\caption{The HIT \( C_4 \).}
+\end{figure}
 
 We may also think of \( C_4 \) as the join of the two-element sets \( \{c_1, c_3\}* \{c_2, c_4\} \).
 
@@ -46,7 +52,7 @@ ob &: o=b
 \end{mydef}
 
 \begin{mydef}
-The HIT \( \oo \) which has 8 faces:
+The HIT \( \oo \) is an octahedron:
 \begin{align*}
 w, y, b, r, g, o &: \oo \\
 wb &: w=b \\
@@ -72,11 +78,19 @@ ybo &: yb\cdot bo\cdot yo^{-1} = \refl_y
 \end{align*}
 \end{mydef}
 
+\begin{figure}[h]
+\centering
 \input{discrete_gauge_theory_oo_tikz}
+\caption{The HIT \( \oo \) which has 6 points, 12 1-paths, 8 2-paths.}
+\end{figure}
 
 We have obvious maps \( \oo_0\xrightarrow[]{i_0} \oo_1\xrightarrow[]{i_1} \oo \) that include each skeleton into the next-higher-dimensional skeleton.
 
-Combinatorial spaces have a concept called the \emph{link} of a vertex, which will be the main tool by which we connect with manifold theory. The vertices in the link are the vertices that are one edge away from the given point, and the edges in the link are the edges connecting these. If the link of an \( n \)-dimensional combinatorial space is always a combinatorial \( n-1 \)-sphere, then we say the space is a \emph{combinatorial triangulation}. We will look only at HITs that have a link that is merely equivalent to \( C_4 \).
+\subsubsection{\texorpdfstring{\( \link \), \( \xbox \), and \( \xdisk \)}{link, xbox, and xdisk}}
+
+Here we'll define combinatorial versions of tangent spaces and tangent circles, in the special case where every vertex has four neighbors.
+
+Combinatorial spaces have a concept called the \emph{link} of a vertex, which will be the main tool by which we connect with manifold theory. The vertices in the link are the vertices that are one edge away from the given point (its immediate neighbors), and the edges in the link are the edges connecting the neighbors to each other. If the link of an \( n \)-dimensional combinatorial space is always a combinatorial \( n-1 \)-sphere, then we say the space is a \emph{combinatorial triangulation}. We will look only at HITs that have a link that is merely equivalent to \( C_4 \). So first we need notation for a connected component of the universe:
 
 \begin{mydef}
 If we have \( X:\Type \) then we define \( \BAut X\defeq \sit{Y:\Type} ||X=Y||_{-1} \). 
@@ -84,7 +98,7 @@ If we have \( X:\Type \) then we define \( \BAut X\defeq \sit{Y:\Type} ||X=Y||_{
 
 Denote by \( abcd:\BAut C_4 \) the HIT with vertices \( a, b, c, d \) and edges \( ab, bc, cd, da \) which clearly has various isomorphisms with \( C_4 \).
 
-We can now define \( \link \) on the 0-skeleton. Extending this later on to the 1-skeleton and 2-skeleton will take us into differential geometry!
+We can now define a map \( \link:\oo_0\to\BAut C_4 \). Extending this later on to the 1-skeleton and 2-skeleton will take us into differential geometry!
 
 \begin{mydef}
 \( \link:\oo_0\to\BAut C_4 \) is given by induction:
@@ -99,13 +113,20 @@ We can now define \( \link \) on the 0-skeleton. Extending this later on to the 
 We chose these orderings for the vertices by standing at the given vertex and enumerating the link in clockwise order, starting from \( w \) if possible, else \( b \).
 \end{mydef}
 
-Besides the link we also want to consider the 5-pointed object that includes the vertex itself and the edges connecting it to the vertices in the link. We will call such a shape an \emph{xbox} since it is a square with both diagonals. We will denote xboxes by extending the square notation with a fifth letter to indicate the center of the xbox. For example, we can define an xbox \( C_4c \) as follows:
+\begin{figure}[h]
+\centering
+\input{discrete_gauge_theory_oo_transport_tikz}
+\caption{\( \link \) for the verticies \( w, b\) and \( r \).}
+\label{fig:triangle_of_equators}
+\end{figure}
+
+Besides the link we also want to consider the 5-pointed object that includes the vertex itself and the edges connecting it to the vertices in the link. We will call such a shape an \emph{xbox} since it is a square with both diagonals. We will denote xboxes by extending the square notation with a fifth letter to indicate the center of the xbox. For example, we can define an xbox \( C_{4c} \) as follows:
 
 \begin{mydef}
-The higher inductive type \( C_4c \) with center \( c \), also denoted \( c_1c_2c_3c_4c \).
+The higher inductive type \( C_{4c} \) with center \( c \), also denoted \( c_1c_2c_3c_4c \).
 \begin{align*}
-C_4c &: \Type \\
-c_1, c_2, c_3, c_4, c &: C_4c \\
+C_{4c} &: \Type \\
+c_1, c_2, c_3, c_4, c &: C_{4c} \\
 c_1c_2 &: c_1 = c_2 \\
 c_2c_3 &: c_2 = c_3 \\
 c_3c_4 &: c_3 = c_4 \\
@@ -117,9 +138,9 @@ c_4c &: c_4 = c
 \end{align*}
 \end{mydef}
 
-We can map our octahedron into the space of xboxes:
+And we get a map \( \xbox:\oo_0\to\Type \) similarly to \( \link \).
 \begin{mydef}
-\( \xbox:\oo_0\to\BAut C_4c \) is given by induction:
+\( \xbox:\oo_0\to\BAut C_{4c} \) is given by induction:
 \begin{align*}
 \xbox(w) &= brgow \\
 \xbox(y) &= bogry \\
@@ -130,13 +151,13 @@ We can map our octahedron into the space of xboxes:
 \end{align*}
 \end{mydef}
 
-Finally we want to consider the 2-type that fills in the faces of the xbox. This is a contractible type we will call a \emph{disk}.
+Finally we want to consider the 2-type that fills in the faces of the xbox. This is a contractible type we will call an \emph{xdisk}. 
 
 \begin{mydef}
-The higher inductive type \( C_{4\disk} \) with center \( c \), also denoted \( c_1c_2c_3c_4c_\disk \).
+The higher inductive type \( C_{4c\xdisk} \) with center \( c \), also denoted \( c_1c_2c_3c_4c_\xdisk \).
 \begin{align*}
-C_{4\disk} &: \Type \\
-c_1, c_2, c_3, c_4, c &: C_{4\disk} \\
+C_{4c\xdisk} &: \Type \\
+c_1, c_2, c_3, c_4, c &: C_{4c\xdisk} \\
 c_1c_2 &: c_1 = c_2 \\
 c_2c_3 &: c_2 = c_3 \\
 c_3c_4 &: c_3 = c_4 \\
@@ -152,29 +173,27 @@ c_4c_1c &: c_4c_2\cdot c_1c\cdot c_4c^{-1} = \refl
 \end{align*}
 \end{mydef}
 
-And we can map the octahedron into the space of disks:
+We can define \( \xdisk:\oo_0\to\BAut C_{4c\xdisk} \) by filling in the triangles in \( \xbox \).
 
 \begin{mydef}
-\( \disk:\oo_0\to\BAut C_{4\disk} \) is given by induction:
+\( \xdisk:\oo_0\to\BAut C_{4c\xdisk} \) is given by induction:
 \begin{align*}
-\xbox(w) &= brgow_\disk \\
-\xbox(y) &= bogry_\disk \\
-\xbox(b) &= woyrb_\disk \\
-\xbox(r) &= wbygr_\disk \\
-\xbox(g) &= wryog_\disk \\
-\xbox(o) &= wgybo_\disk
+\xbox(w) &= brgow_\xdisk \\
+\xbox(y) &= bogry_\xdisk \\
+\xbox(b) &= woyrb_\xdisk \\
+\xbox(r) &= wbygr_\xdisk \\
+\xbox(g) &= wryog_\xdisk \\
+\xbox(o) &= wgybo_\xdisk
 \end{align*}
 \end{mydef}
 
-The idea of such combinatorial manifolds is that each point has a designated local disk and local sphere (and xbox) in the same way that a smooth manifold has an atlas. We want to proceed now to define bundles on this manifold. In HoTT that means constructing a map to a classifying space. The \( \link \) map will be our map, but we have only defined it on \( \oo_0 \).
+\subsubsection{Extending \texorpdfstring{\( \link \)}{link}}
 
-Extending \( \link \) to the 1-skeleton requires new choices. We will choose a map inspired by the tangent bundle of the sphere, using the transport we can intuitively see through the embedding of \( \oo \) in 3-dimensional space as in our pictures. If you focus for a moment just on a path \( w\to b\to r \) and imagine rigidly tipping a moving equator along with a moving point, you can imagine a moving-equator point that starts at \( r \) and stays fixed when the north pole slides from \( w \) to \( b \). When the north pole continues sliding from \( b \) to \( r \) the moving-equator point moves to \( g \). Then it remains fixed when the north pole slides from \( r \) up to \( w \). So all in all we ``moved \( r \) to \( g \).'' When we track all the points on the original \( w \)-equator we see that we performed the rotation we earlier named \( R \).
+Note that \( \BAut C_4 \) is of homotopy dimension at least 2, just as \( \oo \) is. The paths are isomorphisms between types that are merely equivalent to squares, and the 2-paths are homotopies between these. We can make further use of Figure~\ref{fig:triangle_of_equators} by imagining how \( \link \) changes as we slide from point to point. Sliding from \( w \) to \( b \) and tipping the link as we go, we see \( r\mapsto r \) and \( o\mapsto o \) because those lie on the axis of rotation. Then \( g\mapsto w \) and \( b\mapsto y \). 
 
-\input{discrete_gauge_theory_oo_transport_tikz}
-
-In general we have:
+The full map on the 1-skeleton is:
 \begin{mydef}
-Define \( T_1:\oo\to\BAutoso \) on just the 1-skeleton by extending \( T_0 \) as follows:
+Define \( T_1:\oo\to\BAut C_4 \) on just the 1-skeleton by extending \( \link \) as follows:
 Transport away from \( w \):
 \begin{itemize}
 \item \( T_1(wb):[b, r, g, o]\mapsto [y, r, w, o] \) (\( r, o \) fixed)
@@ -198,28 +217,53 @@ Transport along the equator:
 \end{itemize}
 \end{mydef}
 
-At this point we have defined a map on the 1-skeleton of \( \oo \).
-
-\begin{myclaim}
-\( T_1 \) defines a principal circle bundle with connection over the 1-skeleton of \( \oo \).
-\end{myclaim}
-
-We now want to extend this map to all of \( \oo \) by providing values for the eight faces. Here we will be guided by the classical relationship between a connection and its curvature. The curvature is computed from the connection, it doesn't contain any new data. Classically the integral of curvature over a 2-cell is the holonomy given by transport around the boundary. 
+It's very important to be able to visualize what \( T_1 \) does to triangular paths such as \( wb\cdot br\cdot rw \) (which circulates around the boundary of face \( wbr \)). You can see it if you imagine Figure~\ref{fig:triangle_of_equators} as the frames of a short movie. Or you can place your palm over the top of a cube and note where your fingers are pointing, then slide your hand to an equatorial face, then along the equator, then back to the top. The answer is: you come back rotated clockwise by a quarter-turn. 
 
 \begin{mydef}
-Define \( T_2:\oo\to\BAutoso \) by extending \( T_1 \) as follows. We will send every clockwise triangle to \( R' \), the homotopy from \( \refl \) to \( R \):
+The map \( R:C_4\to C_4 \) rotates by one quarter turn, one ``click":
 \begin{itemize}
-\item \( T_2(wbr)=R' \) 
-\item \( T_2(wrg)=R' \)
-\item \( T_2(wgo)=R' \)
-\item \( T_2(ybo)=R' \)
-\item \( T_2(yrb)=R' \) 
-\item \( T_2(ygr)=R' \)
-\item \( T_2(yog)=R' \)
-\item \( T_2(ybo)=R' \)
+\item \( R(c_1) = c_2 \)
+\item \( R(c_2) = c_3 \)
+\item \( R(c_3) = c_4 \)
+\item \( R(c_4) = c_1 \)
+\item \( R(c_1c_2) = c_2c_3 \)
+\item \( R(c_2c_3) = c_3c_4 \)
+\item \( R(c_3c_4) = c_4c_1 \)
+\item \( R(c_4c_1) = c_1c_2 \)
 \end{itemize}
 \end{mydef}
 
+Now let's extend \( T_1 \) to all of \( \oo \) by providing values for the eight faces. The face \( wbr \) is a path from \( \refl_w \) to the concatenation \( wb\cdot br\cdot rw \), and so the image of \( wbr \) under the extended version of \( T_1 \) must be a homotopy from \( \refl_{T_1(w)} \) to \( T_1(wb\cdot br\cdot rw) \).
+
+\begin{mydef}
+Define \( T_2:\oo\to\BAut C_4 \) by extending \( T_1 \) to the faces as follows:
+\begin{itemize}
+\item \( T_2(wbr)=H_R \) 
+\item \( T_2(wrg)=H_R \)
+\item \( T_2(wgo)=H_R \)
+\item \( T_2(ybo)=H_R \)
+\item \( T_2(yrb)=H_R \) 
+\item \( T_2(ygr)=H_R \)
+\item \( T_2(yog)=H_R \)
+\item \( T_2(ybo)=H_R \)
+\end{itemize}
+where \( H_R:R=\refl \) is the obvious homotopy.
+\end{mydef}
+
+All the faces do the same thing: they map to a homotopy between the identity and clockwise rotation by a quarter turn. Concatenating the eight faces in the 2-groupoid \( \oo \) would then map to a homotopy between the identity and two full rotations. This makes visible in HoTT the link between curvature and the euler characteristic (which is 2 for the octahedron).
+
+\subsection{The torus}
+
+We can define a combinatorial torus as a similar HIT. Each vertex will again have four neighbors and all the links will be merely equal to \( C_4 \). See Figure~\ref{fig:torus}. Hmm that one isn't a combinatorial manifold so never mind!
+
+In this case it should be intuitively obvious that transport around the boundary of any face is the identity, corresponding to the torus being flat.
+
+\begin{figure}[h]
+\centering
+\input{discrete_gauge_theory_torus_tikz}
+\caption{Torus. The squares are nicknamed cap, cup, lhole, and rhole. Each one has a \( b, r, g, o \) vertex, in that order when following the arrows. All the \( b \)s are on the outer corners, all the \( r \)s are in the back, and so on.}
+\label{fig:torus}
+\end{figure}
 
 \subsection{Combinatorial manifolds}
 
